2015-09-16  6.9.2-2 Cristy  <quetzlzacatenango@image...>
  * Add Bootstrap MIT license to ImageMagick web CSS and JS.
  * Use modern idiom for autoconf
    Fix a forgotten dir when regenerating html doc (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=28363).

2015-09-12  6.9.2-1 Cristy  <quetzlzacatenango@image...>
  * New version 6.9.2-1, GIT revision 10201:5879612:20150913.

2015-09-13  6.9.2-1 Dirk Lemstra <dirk@lem.....org>
  * Preserving image origin in TGA files (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=1&t=28310).

2015-08-15  6.9.2-1 Cristy  <quetzlzacatenango@image...>
  * Support color compliance for TXT format (e.g. -define txt:compliance=css)
    (bug report from Anthony).
  * The first argument of a hsl() color is integer, not percentage (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=2&t=26072).
  * Limit -fx recursive to avoid stack overflow (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=28200).
  * Support inline images with data URLS.
  * Report progress less often (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=28299).
  * Don't set image colorspace to gray for -alpha copy option.
  * Fixed a possible memory leak associated with the -sampling-factor option.
  * GetImageType() no longer has side-effects to match behavior of IMv7.

2015-08-15  6.9.2-0 Cristy  <quetzlzacatenango@image...>
  * New version 6.9.2-0, GIT revision 10143:3534f6d:20150815.

2015-08-10  6.9.2-0 Cristy  <quetzlzacatenango@image...>
  * Swap pixels for -spread command-line option (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=1&t=28043).
  * fx logical operations short circuit (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=28179).
  * Type cast intensity variable (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=28182).