@@ -1,10 +1,14 @@
+2015-09-17  6.9.2-2 Dirk Lemstra <dirk@lem.....org>
+  * Added extra checks to avoid out of bounds error when parsing the 8bim 
+    profile. (reference https://github.com/ImageMagick/ImageMagick/issues/31).
+
 2015-09-16  6.9.2-2 Cristy  <quetzlzacatenango@image...>
   * Add Bootstrap MIT license to ImageMagick web CSS and JS.
   * Use modern idiom for autoconf
     Fix a forgotten dir when regenerating html doc (reference
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=28363).
 
-2015-09-12  6.9.2-1 Cristy  <quetzlzacatenango@image...>
+2015-09-14  6.9.2-1 Cristy  <quetzlzacatenango@image...>
   * New version 6.9.2-1, GIT revision 10201:5879612:20150913.
 
 2015-09-13  6.9.2-1 Dirk Lemstra <dirk@lem.....org>
